--- a/top.html
+++ b/top.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>home</title>
   <link rel="stylesheet" href="top.css">
+  <script src="top.js"></script>
 </head>
 <body>
   <div class="header">
