--- a/account.html
+++ b/account.html
@@ -1,1 +1,98 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>アカウント設定</title>
+  <link rel="stylesheet" href="common.css">
+  <style>
+    .edit-button-wrapper {
+      display: flex;
+      justify-content: flex-end;
+      padding: 8px 16px;
+    }
 
+    .edit-button {
+      padding: 6px 12px;
+      font-size: 14px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .edit-button:hover {
+      background-color: #0056b3;
+    }
+
+    .items {
+      flex: 1;
+      overflow-y: auto;
+      padding: 12px;
+      box-sizing: border-box;
+      margin-bottom: 72px;
+    }
+
+    .item {
+      margin-bottom: 16px;
+    }
+
+    .item label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 4px;
+    }
+
+    .item .value {
+      padding: 8px;
+      background-color: #f0f0f0;
+      border-radius: 4px;
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <div class="date">2025 3/3</div>
+    <div class="header-icons">
+      <img src="notifications.png" alt="通知" />
+      <img src="Settings.png" alt="設定" />
+      <img src="account_circle.png" alt="プロフィール" />
+    </div>
+  </div>
+
+  <div class="edit-button-wrapper">
+    <button class="edit-button" onclick="location.href='setting_edit.html'">編集</button>
+  </div>
+
+  <div class="items">
+    <div class="item"><label>姓</label><div class="value">山田</div></div>
+    <div class="item"><label>名</label><div class="value">太郎</div></div>
+    <div class="item"><label>フリガナ（セイ）</label><div class="value">ヤマダ</div></div>
+    <div class="item"><label>フリガナ（メイ）</label><div class="value">タロウ</div></div>
+    <div class="item"><label>年齢</label><div class="value">76</div></div>
+    <div class="item"><label>性別</label><div class="value">男性</div></div>
+    <div class="item"><label>住所</label><div class="value">東京都港区1-2-3</div></div>
+    <div class="item"><label>ご家族の住所</label><div class="value">東京都渋谷区4-5-6</div></div>
+    <div class="item"><label>緊急連絡先</label><div class="value">090-1234-5678</div></div>
+    <div class="item"><label>服薬中の薬</label><div class="value">降圧剤</div></div>
+    <div class="item"><label>服薬頻度</label><div class="value">毎朝1回</div></div>
+    <div class="item"><label>持病</label><div class="value">高血圧</div></div>
+    <div class="item"><label>アレルギー</label><div class="value">なし</div></div>
+    <div class="item"><label>趣味</label><div class="value">園芸</div></div>
+    <div class="item"><label>普段の主な外出先</label><div class="value">近所のスーパー</div></div>
+    <div class="item"><label>ゴミ出し日</label><div class="value">月・木・土</div></div>
+    <div class="item"><label>デイサービス頻度</label><div class="value">週3回</div></div>
+    <div class="item"><label>その他リマインドしたい情報</label><div class="value">お風呂：毎週火曜と金曜</div></div>
+  </div>
+
+  <div class="footer">
+    <img src="Home.png" alt="ホーム" />
+    <img src="List.png" alt="記録" />
+    <img src="File text.png" alt="カルテ" />
+    <img src="Settings.png" alt="設定" />
+  </div>
+
+  <script src="navigation.js"></script>
+</body>
+</html>
