--- a/account.html
+++ b/account.html
@@ -3,51 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>アカウント設定</title>
+  <title>アカウント</title>
   <link rel="stylesheet" href="common.css">
   <style>
-    .edit-button-wrapper {
-      display: flex;
-      justify-content: flex-end;
-      padding: 8px 16px;
-    }
-
-    .edit-button {
-      padding: 6px 12px;
-      font-size: 14px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    .edit-button:hover {
-      background-color: #0056b3;
-    }
-
-    .items {
+    .main {
       flex: 1;
       overflow-y: auto;
-      padding: 12px;
+      padding: 20px;
+      margin-bottom: 80px;
       box-sizing: border-box;
-      margin-bottom: 72px;
     }
 
-    .item {
-      margin-bottom: 16px;
+    .profile {
+      text-align: center;
+      margin-bottom: 24px;
     }
 
-    .item label {
-      display: block;
+    .profile img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+    }
+
+    .profile h2 {
+      font-size: 1.2em;
+      margin: 12px 0 4px;
+    }
+
+    .section-label {
       font-weight: bold;
-      margin-bottom: 4px;
+      font-size: 0.9em;
+      color: #888;
+      margin: 24px 0 8px;
     }
 
-    .item .value {
-      padding: 8px;
-      background-color: #f0f0f0;
-      border-radius: 4px;
+    .main button {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      padding: 14px 16px;
+      margin-bottom: 12px;
+      font-size: 1em;
+      background: #f0f0f0;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      box-sizing: border-box;
+      text-align: left;
+    }
+
+    .main button:hover {
+      background: #e5e5e5;
     }
   </style>
 </head>
@@ -61,29 +67,25 @@
     </div>
   </div>
 
-  <div class="edit-button-wrapper">
-    <button class="edit-button" onclick="location.href='setting_edit.html'">編集</button>
-  </div>
+  <div class="main">
+    <div class="profile">
+      <img src="account_circle.png" alt="プロフィール画像" />
+      <h2>山田 花子</h2>
+    </div>
 
-  <div class="items">
-    <div class="item"><label>姓</label><div class="value">山田</div></div>
-    <div class="item"><label>名</label><div class="value">太郎</div></div>
-    <div class="item"><label>フリガナ（セイ）</label><div class="value">ヤマダ</div></div>
-    <div class="item"><label>フリガナ（メイ）</label><div class="value">タロウ</div></div>
-    <div class="item"><label>年齢</label><div class="value">76</div></div>
-    <div class="item"><label>性別</label><div class="value">男性</div></div>
-    <div class="item"><label>住所</label><div class="value">東京都港区1-2-3</div></div>
-    <div class="item"><label>ご家族の住所</label><div class="value">東京都渋谷区4-5-6</div></div>
-    <div class="item"><label>緊急連絡先</label><div class="value">090-1234-5678</div></div>
-    <div class="item"><label>服薬中の薬</label><div class="value">降圧剤</div></div>
-    <div class="item"><label>服薬頻度</label><div class="value">毎朝1回</div></div>
-    <div class="item"><label>持病</label><div class="value">高血圧</div></div>
-    <div class="item"><label>アレルギー</label><div class="value">なし</div></div>
-    <div class="item"><label>趣味</label><div class="value">園芸</div></div>
-    <div class="item"><label>普段の主な外出先</label><div class="value">近所のスーパー</div></div>
-    <div class="item"><label>ゴミ出し日</label><div class="value">月・木・土</div></div>
-    <div class="item"><label>デイサービス頻度</label><div class="value">週3回</div></div>
-    <div class="item"><label>その他リマインドしたい情報</label><div class="value">お風呂：毎週火曜と金曜</div></div>
+    <div class="section-label">設定と管理</div>
+    <button onclick="location.href='settings.html'">プロフィールを編集する</button>
+    <button onclick="location.href='notifications.html'">通知を管理する</button>
+    <button>表示・言語設定</button>
+
+    <div class="section-label">アクティビティ</div>
+    <button onclick="location.href='record.html'">ケア履歴を見る</button>
+    <button>今月の貢献度</button>
+
+    <div class="section-label">セキュリティとサポート</div>
+    <button>パスコード変更</button>
+    <button>アカウント引継ぎ</button>
+    <button onclick="location.href='index.html'">ログアウト</button>
   </div>
 
   <div class="footer">
