--- a/record.html
+++ b/record.html
@@ -15,11 +15,10 @@
       overflow-y: auto;
     }
 
-    .content-wrapper {
+    .content {
       width: 100%;
       max-width: 400px;
       background: #fff;
-      margin-bottom: 72px;
     }
 
     section {
@@ -33,6 +32,29 @@
 
     ul {
       padding-left: 1em;
+    }
+
+    .month-selector {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      margin-top: 16px;
+      margin-bottom: 12px;
+    }
+
+    .month-button {
+      background: none;
+      border: none;
+      font-size: 20px;
+      cursor: pointer;
+      padding: 4px 8px;
+    }
+
+    .current-month {
+      font-size: 18px;
+      color: #000;
+      font-weight: bold;
     }
 
     .pdf-button-wrapper {
@@ -66,8 +88,14 @@
     </div>
   </div>
 
+  <div class="month-selector">
+    <button class="month-button">＜</button>
+    <span class="current-month">2025年8月</span>
+    <button class="month-button">＞</button>
+  </div>
+
   <div class="content-container">
-    <div class="content-wrapper">
+    <div class="content">
       <p>記入日 0/0</p>
 
       <section>
