--- a/calendar.html
+++ b/calendar.html
@@ -137,7 +137,7 @@
     <div class="calendar-body-wrapper">
       <div class="search">
         <input type="text" placeholder="履歴を検索..." />
-        <button class="search-button">検査</button>
+        <button class="search-button">検索</button>
       </div>
 
       <div class="calendar-header">
