--- a/record.html
+++ b/record.html
@@ -137,7 +137,7 @@
       <div id="reportContent" style="display: none;">
         <div class="report-content" id="reportText"></div>
         <div class="pdf-button-wrapper">
-          <a href="#" class="pdf-button" onclick="downloadReport()">PDF出力</a>
+          <a href="#" class="pdf-button" onclick="downloadReport()">txt出力</a>
         </div>
       </div>
     </div>
