--- a/account.html
+++ b/account.html
@@ -89,7 +89,7 @@
     <button onclick="location.href='record.html'">ケア履歴を見る</button>
 
     <div class="section-label">セキュリティとサポート</div>
-    <button>パスコード変更</button>
+    <button onclick="location.href='change_password.html'">パスワード変更</button>
     <button onclick="location.href='index.html'">ログアウト</button>
   </div>
 
