--- a/notifications.html
+++ b/notifications.html
@@ -121,22 +121,25 @@
 
     .refresh-button {
       position: fixed;
-      top: 80px;
-      right: 20px;
-      background: #2196F3;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 48px;
-      height: 48px;
-      cursor: pointer;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-      font-size: 16px;
+      bottom: 24px;
+      right: 24px;
+      background: #f5f5f5;      /* 背景色を薄いグレーに */
+      color: #2196F3;           /* アイコン色を青に */
+      border: 1px solid #ccc;   /* 枠線を追加 */
+      border-radius: 8px;       /* 角丸を少しだけ */
+      width: 60px;
+      height: 60px;
+      font-size: 32px;          /* アイコンを大きく */
+      box-shadow: none;         /* 影を消す */
       z-index: 100;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.2s;
     }
-
     .refresh-button:hover {
-      background: #1976D2;
+      background: #e0e0e0;      /* ホバー時の色 */
     }
 
     .notification-status {
