--- a/notifications.html
+++ b/notifications.html
@@ -120,17 +120,17 @@
     }
 
     .refresh-button {
-      position: fixed;
-      bottom: 24px;
+      position: absolute;
+      top: 24px;
       right: 24px;
-      background: #f5f5f5;      /* 背景色を薄いグレーに */
-      color: #2196F3;           /* アイコン色を青に */
-      border: 1px solid #ccc;   /* 枠線を追加 */
-      border-radius: 8px;       /* 角丸を少しだけ */
+      background: #f5f5f5;
+      color: #2196F3;
+      border: 1px solid #ccc;
+      border-radius: 8px;
       width: 60px;
       height: 60px;
-      font-size: 32px;          /* アイコンを大きく */
-      box-shadow: none;         /* 影を消す */
+      font-size: 32px;
+      box-shadow: none;
       z-index: 100;
       cursor: pointer;
       display: flex;
@@ -139,7 +139,7 @@
       transition: background 0.2s;
     }
     .refresh-button:hover {
-      background: #e0e0e0;      /* ホバー時の色 */
+      background: #e0e0e0;
     }
 
     .notification-status {
