--- a/notifications.html
+++ b/notifications.html
@@ -121,7 +121,7 @@
 
     .refresh-button {
       position: absolute;
-      top: 24px;
+      top: 90px;      /* 削除ボタンと同じy軸に調整（通知カードの下部付近） */
       right: 24px;
       background: #f5f5f5;
       color: #2196F3;
