--- a/notifications.html
+++ b/notifications.html
@@ -121,8 +121,8 @@
 
     .refresh-button {
       position: absolute;
-      top: 90px;      /* 削除ボタンと同じy軸に調整（通知カードの下部付近） */
-      right: 24px;
+      top: 24px;
+      right: 24px; /* 削除ボタンと同じX軸（右端） */
       background: #f5f5f5;
       color: #2196F3;
       border: 1px solid #ccc;
@@ -141,7 +141,6 @@
     .refresh-button:hover {
       background: #e0e0e0;
     }
-
     .notification-status {
       display: inline-block;
       padding: 2px 6px;
