--- a/notifications.html
+++ b/notifications.html
@@ -119,10 +119,10 @@
       font-size: 16px;
     }
 
-    .refresh-button {
+    /*.refresh-button {
       position: absolute;
       top: 24px;
-      right: 24px; /* 削除ボタンと同じX軸（右端） */
+      right: 24px; 
       background: #f5f5f5;
       color: #2196F3;
       border: 1px solid #ccc;
@@ -140,7 +140,7 @@
     }
     .refresh-button:hover {
       background: #e0e0e0;
-    }
+    }*/
     .notification-status {
       display: inline-block;
       padding: 2px 6px;
