--- a/notifications.html
+++ b/notifications.html
@@ -119,28 +119,29 @@
       font-size: 16px;
     }
 
-    /*.refresh-button {
-      position: absolute;
-      top: 24px;
-      right: 24px; 
-      background: #f5f5f5;
+    .refresh-button {
+      position: fixed;
+      top: 16px;
+      right: 16px;
+      background: #ffffff;
       color: #2196F3;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      width: 60px;
-      height: 60px;
-      font-size: 32px;
+      border: 2px solid #2196F3;
+      border-radius: 50%;
+      width: 48px;
+      height: 48px;
+      font-size: 28px;
       box-shadow: none;
       z-index: 100;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: background 0.2s;
+      transition: background 0.2s, color 0.2s;
     }
     .refresh-button:hover {
-      background: #e0e0e0;
-    }*/
+      background: #e3f2fd;
+      color: #1565c0;
+    }
     .notification-status {
       display: inline-block;
       padding: 2px 6px;
