--- a/notifications.html
+++ b/notifications.html
@@ -112,34 +112,31 @@
       margin: 16px;
     }
 
-    .no-notifications {
-      text-align: center;
-      padding: 40px 20px;
-      color: #888;
-      font-size: 16px;
+    .notifications {
+      position: relative; /* 子要素のabsoluteに対応させるため追加 */
+      padding: 16px;
+      overflow-y: auto;
+      flex: 1;
+      margin-bottom: 64px;
     }
 
     .refresh-button {
-      position: fixed;
-      top: 16px;
+      position: absolute;
+      bottom: 16px;
       right: 16px;
-      background: #ffffff;
+      background: none; /* 背景なし */
       color: #2196F3;
-      border: 2px solid #2196F3;
-      border-radius: 50%;
-      width: 48px;
-      height: 48px;
+      border: none;
       font-size: 28px;
-      box-shadow: none;
-      z-index: 100;
+      width: auto;
+      height: auto;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
-      transition: background 0.2s, color 0.2s;
+      z-index: 10;
     }
     .refresh-button:hover {
-      background: #e3f2fd;
       color: #1565c0;
     }
     .notification-status {
@@ -172,7 +169,9 @@
     </div>
   </div>
 
-  <button class="refresh-button" onclick="loadNotifications()" title="更新">⟳</button>
+  <div class="notifications" id="notificationsContainer" style="display: none;">
+    <button class="refresh-button" onclick="loadNotifications()" title="更新">⟳</button>
+  </div>
 
   <div id="loadingMessage" class="loading">通知を読み込み中...</div>
   <div id="errorMessage" class="error" style="display: none;"></div>
