--- a/notifications.html
+++ b/notifications.html
@@ -120,25 +120,28 @@
       margin-bottom: 64px;
     }
 
+    /* ラッパーを右寄せ */
+    .refresh-button-wrapper {
+      display: flex;
+      justify-content: flex-end;
+      padding: 8px 16px 0;
+    }
+
+    /* ボタンのデザイン：背景なし、シンプルなアイコン */
     .refresh-button {
-      position: absolute;
-      bottom: 16px;
-      right: 16px;
-      background: none; /* 背景なし */
+      background: none;
       color: #2196F3;
       border: none;
-      font-size: 28px;
-      width: auto;
-      height: auto;
+      font-size: 24px;
       cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 10;
+      padding: 4px 8px;
+      transition: color 0.2s ease;
     }
+
     .refresh-button:hover {
       color: #1565c0;
     }
+
     .notification-status {
       display: inline-block;
       padding: 2px 6px;
@@ -169,9 +172,10 @@
     </div>
   </div>
 
-  <div class="notifications" id="notificationsContainer" style="display: none;">
+  <div class="refresh-button-wrapper">
     <button class="refresh-button" onclick="loadNotifications()" title="更新">⟳</button>
   </div>
+
 
   <div id="loadingMessage" class="loading">通知を読み込み中...</div>
   <div id="errorMessage" class="error" style="display: none;"></div>
