--- a/notifications.html
+++ b/notifications.html
@@ -160,6 +160,18 @@
       background: #9e9e9e;
       color: white;
     }
+    .icon-circle-wrapper {
+      display: flex;
+      justify-content: flex-end;
+      padding: 12px 16px 0 16px; /* 上右下左 */
+    }
+
+    .icon-circle {
+      width: 40px;
+      height: 40px;
+      background-color: #ccc; /* グレー */
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body>
@@ -181,6 +193,9 @@
   <div id="errorMessage" class="error" style="display: none;"></div>
   <div id="noNotificationsMessage" class="no-notifications" style="display: none;">通知がありません</div>
 
+  <div class="icon-circle-wrapper">
+    <div class="icon-circle"></div>
+  </div>
   <div class="notifications" id="notificationsContainer" style="display: none;">
     <!-- 動的に通知が挿入される -->
   </div>
