--- a/notifications.html
+++ b/notifications.html
@@ -160,16 +160,18 @@
       background: #9e9e9e;
       color: white;
     }
-    .icon-circle-wrapper {
+    .icon-refresh-wrapper {
       display: flex;
       justify-content: flex-end;
-      padding: 12px 16px 0 16px; /* 上右下左 */
+      align-items: center;
+      padding: 12px 16px 0 16px;
+      gap: 8px; /* ボタンと円の間隔調整 */
     }
 
     .icon-circle {
       width: 40px;
       height: 40px;
-      background-color: #ccc; /* グレー */
+      background-color: #ccc;
       border-radius: 50%;
     }
   </style>
@@ -184,10 +186,8 @@
     </div>
   </div>
 
-  <div class="refresh-button-wrapper">
+  <div class="icon-refresh-wrapper">
     <button class="refresh-button" onclick="loadNotifications()" title="更新">⟳</button>
-  </div>
-  <div class="icon-circle-wrapper">
     <div class="icon-circle"></div>
   </div>
 
